     Defaults to no in the first two cases, yes in the third
     If yes, the target hex is outlined.
   * New ~SCALE_INTO(w,h) IPF which preserves aspect ratio, using bilinear
     interpolation scaling.
   * New ~SCALE_INTO_SHARP(w,h) IPF which preserves aspect ratio, using
     nearest neighbor scaling.
   * Support delayed_variable_substitution= in [on_undo], [on_redo]
   * formula= in SUF can now reference $other_unit via the formula variable "other"
   * formula= now supported in location, side, and weapon filters
   * Weapon filters now support number, parry, accuracy, and movement_used
   * New [has_attack] in standard unit filters; supercedes has_weapon= and
     uses full weapon filter.
   * lua_function=var.member now works in SUF; however, 'var' still needs to
     be a global variable.
   * AiWML:
     * Simplified aspect syntax which works for all aspects, present and future:
       * All aspects with simple values can be specified as key=value
       * Except attacks, all aspects with complex values have a simple tag form
         containing only the aspect value (e.g. [avoid])
       * All aspects, simple and complex, can be specified using a tag named by
         the aspect, whose contents is the same as a corresponding [facet]
       * The full [aspect] and [facet] syntax also still works
     * [ai] configs no longer recognize the version= key
     * ai_algorithm key now selects a preset AI; possible values include
       "ai_default_rca", "experimental_ai", and "idle_ai", but custom AIs
       defined by eras or modifications with an [ai] tag can also be used
     * [leader_goal] now automatically sets facet ID for auto_remove
       (Only if using simplified syntax; in full syntax, the ID must still be
       specified in two places.)
     * The AI config in the gamestate inspector is now split into multiple
       sections according to the type of component.
     * The following deprecated components have been removed: