@@ -41,6 +41,7 @@ namespace game_events
 		bool matches_unit(const unit_map::const_iterator & un_it) const;
 		bool matches_unit_filter(const unit_map::const_iterator & un_it,
 		                         const vconfig & filter) const;
+		unit_const_ptr get_unit() const;
 
 		static const entity_location null_entity;
 
