@@ -53,8 +53,8 @@ static lg::log_domain log_replay("replay");
 
 synced_context::synced_state synced_context::state_ = synced_context::UNSYNCED;
 int synced_context::last_unit_id_ = 0;
-synced_context::tconfig_vector synced_context::undo_commands_ = synced_context::tconfig_vector();
-synced_context::tconfig_vector synced_context::redo_commands_ = synced_context::tconfig_vector();
+synced_context::event_list synced_context::undo_commands_;
+synced_context::event_list synced_context::redo_commands_;
 bool synced_context::is_simultaneously_ = false;
 
 bool synced_context::run(const std::string& commandname, const config& data, bool use_undo, bool show, synced_command::error_handler_function error_handler)
@@ -383,14 +383,24 @@ config synced_context::ask_server_choice(const server_choice& sch)
 	}
 }
 
-void synced_context::add_undo_commands(const config& commands)
+void synced_context::add_undo_commands(const config& commands, const game_events::queued_event& ctx)
 {
-	undo_commands_.insert(undo_commands_.begin(), new config(commands));
+	undo_commands_.emplace_front(commands, ctx);
 }
 
-void synced_context::add_redo_commands(const config& commands)
+void synced_context::add_redo_commands(const config& commands, const game_events::queued_event& ctx)
 {
-	redo_commands_.insert(redo_commands_.begin(), new config(commands));
+	redo_commands_.emplace_front(commands, ctx);
+}
+
+void synced_context::reset_undo_commands()
+{
+	undo_commands_.clear();
+}
+
+void synced_context::reset_redo_commands()
+{
+	redo_commands_.clear();
 }
 
 set_scontext_synced_base::set_scontext_synced_base()
